--- a/_quarto.yml
+++ b/_quarto.yml
@@ -4,7 +4,7 @@ project:
 
 website:
   title: "EARN Code Library"
-  
+
   sidebar: 
     style: 'docked'
     search: true
@@ -33,7 +33,10 @@ website:
     
 format:
   html:
-    theme: cosmo
+    theme: 
+      #website theme includes dark and light modes!
+      light: cosmo
+      dark: darkly
     css: styles.css
     toc: true
 
