Add stata example

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -27,7 +27,7 @@ website:
       contents:
       - code/epi-libraries.qmd
       
-    - section: "Annotated tutorials"
+    - section: "Code tutorials"
       contents:
       - code/inflation_adjusting.qmd
       - code/epi_microdata.qmd
