--- a/_quarto.yml
+++ b/_quarto.yml
@@ -16,7 +16,7 @@ website:
   
     right: 
       - icon: fab fa-github
-        href: https://economic.github.io/earn_code_library/code/about.html
+        href: https://github.com/Economic/earn_code_library
 
 
   sidebar: 
