--- a/_quarto.yml
+++ b/_quarto.yml
@@ -26,7 +26,7 @@ website:
 
     - section: "Home"
       contents: 
-      - earn_code_library/code/about.qmd
+      - code/about.qmd
 
     - section: "EPI-built resources"
       contents:
