deleting old files

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -61,6 +61,7 @@ website:
       - section: "Code Repository"
         contents:
         - union_density.qmd
+        - foreign_born_stats_ipumsr.qmd
 
     - section: "Stata code"
       contents:
