fixing libraries display text 2

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,8 +1,7 @@
 project:
   type: website
   output-dir: docs
-  render:
-  - foreign_born_stats_ipumsr.qmd
+  #render:
   
 website:
   title: "Code Library"
