adding rtw union code

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -63,6 +63,7 @@ website:
         contents:
         - union_density.qmd
         - foreign_born_stats_ipumsr.qmd
+        - rtw_union.qmd
 
     - section: "Stata code"
       contents:
