Add 2025 Intro to R Webinar

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -35,6 +35,7 @@ website:
       
       - section: "Tutorials"
         contents:
+        - Intro_to_R.qmd
         - viz_workshop.qmd
         - benchmarking_workshop.qmd
         - prev_bootcamps.qmd
