--- a/_quarto.yml
+++ b/_quarto.yml
@@ -35,7 +35,7 @@ website:
       
       - section: "Tutorials"
         contents:
-        - Intro_to_R.qmd
+        - intro_to_r.qmd
         - viz_workshop.qmd
         - benchmarking_workshop.qmd
         - prev_bootcamps.qmd
