add EPI's CPS Extracts EARN Talk page and add note to Foraging for Data page

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -36,6 +36,7 @@ website:
       - section: "Tutorials"
         contents:
         - intro_to_r.qmd
+        - epi_extracts_webinar.qmd
         - foraging_for_data.qmd
         - viz_workshop.qmd
         - benchmarking_workshop.qmd
